<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View" />
        <variable
            name="clickListener"
            type="android.view.View.OnClickListener"/>
        <variable
            name="item"
            type="himanshu.project.mydoc.data.dataModel.ResultResponse" />

        <variable
            name="viemodel"
            type="himanshu.project.mydoc.viewmodels.NewsViewModels" />
    </data>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/card_margin"
        android:layout_marginLeft="@dimen/card_margin"
        android:layout_marginRight="@dimen/card_margin"
        android:onClick="@{clickListener}"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/card_card_elevation"
        app:cardMaxElevation="@dimen/card_card_elevation"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/appbar_padding_top"
                android:layout_marginLeft="@dimen/appbar_padding_top"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/appbar_padding_top">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTxt"
                    android:text="@string/news_section" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/appbar_padding_top"
                    android:text="@{item.section}"
                    android:textStyle="bold"
                    android:textColor="@color/colorTxt" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/appbar_padding_top"
                android:layout_marginLeft="@dimen/appbar_padding_top"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTxt"
                    android:text="@string/news_subsection" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTxt"
                    android:textStyle="bold"
                    android:layout_marginLeft="@dimen/appbar_padding_top"
                    android:text="@{item.subsection}" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/appbar_padding_top"
                android:layout_marginLeft="@dimen/appbar_padding_top"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTxt"
                    android:text="@string/news_published_date" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTxt"
                    android:layout_marginLeft="@dimen/appbar_padding_top"
                    android:textStyle="bold"
                    android:text="@{item.published_date.substring(0,10)}" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/appbar_padding_top"
                android:layout_marginBottom="@dimen/appbar_padding_top"
                android:layout_marginLeft="@dimen/appbar_padding_top"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textView_tool_borrowed_count_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTxt"
                    android:text="@string/news_title" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTxt"
                    android:layout_marginLeft="@dimen/appbar_padding_top"
                    android:textStyle="bold"
                    android:text="@{item.title}" />

            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>


